lade till index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,53 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  
+  <header>
+    <img src="assets/images/hand.jpeg" alt="">
+    <img src="assets/icons/seedling.svg" alt="">
+    <img src="assets/icons/dig.svg" alt="">
+      <nav>
+        <ol>
+          <li><a href="#"></a>Planer</li>
+          <li><a href="#"></a>Historik</li>
+          <li><a href="#"></a>Tips</li>
+          <li><a href="#"></a>Logga in</li>
+        </ol>
+      </nav>
+
+      
+  </header>
+
+  <main>
+    <h1>Planet Planthood</h1>
+
+    <section>
+        <img src="assets/icons/Vectorseedpackage.svg" alt="">
+        <h2>Säsong att Så</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias placeat reprehenderit asperiores voluptate repellendus numquam optio maxime explicabo id itaque!</p>
+        <a href="#">Se Tips</a>
+    </section>
+  </main>
+
+    <section class="planerade">
+        <h2>Våra planerade planteringar</h2>
+        <img src="assets/icons/plant.svg" alt="">
+        <img src="assets/icons/plant.svg" alt="">
+        <img src="assets/icons/plant.svg" alt="">
+        <img src="assets/icons/plant.svg" alt="">
+        <img src="assets/icons/plant.svg" alt="">
+        <img src="assets/icons/plant.svg" alt="">
+    </section>
+
+    <section class="odlingar">
+        <h2>Våra tidigare odlingar</h2>
+        <img src="assets/icons/plant.svg" alt="">
+    </section>
+
+    <footer>
+        <section>
+          <h2>Vi Hörs</h2>
+          <img src="assets/icons/Logo.svg" alt="">
+        </section>
+    </footer>
 </body>
 </html>
