--- a/mina.html
+++ b/mina.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mina sidor - Planned Planthood</title>
+  <link rel="stylesheet" href="mina.css">
 </head>
 <body>
-    
-</body>
-</html>
+  <header class="header">
+    <nav class="nav">
+      <figure class="nav__logo">
+        <img src="assets/icons/Logo.svg" alt="Planned Planthood logotyp" class="nav__logo-img">
+        <h1 class="nav__title">Planned Planthood</h1>
+      </figure>
+      <ul class="nav__menu">
+        <li class="nav__item">
+          <a href="index.html" class="nav__link">Hem</a>
+        </li>
+        <li class="nav__item">
+          <a href="mina-sidor.html" class="nav__link nav__link--active">Mina sidor</a>
+        </li>
+        <li class="nav__item">
+          <a href="#kontakt" class="nav__link">Kontakt</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
