--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="index.html" class="nav__link nav__link--active">Hem</a>
         </li>
         <li class="nav__item">
-          <a href="mina-sidor.html" class="nav__link">Mina sidor</a>
+          <a href="mina.html" class="nav__link">Mina sidor</a>
         </li>
         <li class="nav__item">
           <a href="#kontakt" class="nav__link">Kontakt</a>
