changed the icon in the season section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <span
             class="icon-mask icon-mask--lg"
             aria-hidden="true"
-            style="--icon-url: url('assets/icons/plant.svg')"
+            style="--icon-url: url('assets/icons/Vectorseedpackage.svg')"
           ></span>
         </figure>
         <article class="season__content">
