fixed the icons over the hands

--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
         <figure class="masthead__photo">
           <img
             src="assets/images/hand.jpeg"
-            alt="Hand som håller jord och småplantor"
+            alt="Hand som håller jord med småplantor"
           />
+          <figcaption class="masthead__heart" aria-hidden="true">
+            <img src="assets/icons/Logo.svg" alt="" />
+            <span class="vh">Dekorativ hjärtikon</span>
+          </figcaption>
         </figure>
+
         <section class="masthead__tile masthead__tile--brown">
           <span
             class="icon-mask"
@@ -87,11 +92,11 @@
               <img
                 class="card__img"
                 src="assets/images/gurka.avif"
-                alt="Gurka på växt"
+                alt="Närbild på en gurkplanta"
               />
               <span class="card__badge chip chip--date">15 april 2024</span>
               <span class="card__glyph" aria-hidden="true"
-                ><img src="assets/icons/plant.svg" alt=""
+                ><img src="assets/icons/plant.svg" alt="" aria-hidden="true"
               /></span>
             </figure>
             <figcaption class="card__body">
@@ -110,7 +115,7 @@
               />
               <span class="card__badge chip chip--date">1 april 2024</span>
               <span class="card__glyph" aria-hidden="true"
-                ><img src="assets/icons/plant.svg" alt=""
+                ><img src="assets/icons/plant.svg" alt="" aria-hidden="true"
               /></span>
             </figure>
             <figcaption class="card__body">
@@ -125,11 +130,11 @@
               <img
                 class="card__img"
                 src="assets/images/ärta.avif"
-                alt="Färska ärtor på växt"
+                alt="Färska sockerärtor på planta"
               />
               <span class="card__badge chip chip--date">1 april 2024</span>
               <span class="card__glyph" aria-hidden="true"
-                ><img src="assets/icons/plant.svg" alt=""
+                ><img src="assets/icons/plant.svg" alt="" aria-hidden="true"
               /></span>
             </figure>
             <figcaption class="card__body">
@@ -144,11 +149,11 @@
               <img
                 class="card__img"
                 src="assets/images/lilagrönsak.avif"
-                alt="Lila rotsaker"
+                alt="Skördade majrovor i lila och vitt"
               />
               <span class="card__badge chip chip--date">1 april 2024</span>
               <span class="card__glyph" aria-hidden="true"
-                ><img src="assets/icons/plant.svg" alt=""
+                ><img src="assets/icons/plant.svg" alt="" aria-hidden="true"
               /></span>
             </figure>
             <figcaption class="card__body">
@@ -167,7 +172,7 @@
               />
               <span class="card__badge chip chip--date">1 april 2024</span>
               <span class="card__glyph" aria-hidden="true"
-                ><img src="assets/icons/plant.svg" alt=""
+                ><img src="assets/icons/plant.svg" alt="" aria-hidden="true"
               /></span>
             </figure>
             <figcaption class="card__body">
@@ -186,7 +191,7 @@
               />
               <span class="card__badge chip chip--date">1 april 2024</span>
               <span class="card__glyph" aria-hidden="true"
-                ><img src="assets/icons/plant.svg" alt=""
+                ><img src="assets/icons/plant.svg" alt="" aria-hidden="true"
               /></span>
             </figure>
             <figcaption class="card__body">
@@ -228,7 +233,7 @@
         <figure class="footer__panel footer__panel--left">
           <img
             src="assets/images/massagrönsaker.avif"
-            alt="Grönsaker i skuggig trädgård"
+            alt="Korg med olika grönsaker i skuggig trädgård"
           />
           <figcaption class="footer__overlay">
             <h3 class="footer__title">Vi hörs!</h3>
@@ -258,13 +263,7 @@
         <figure class="footer__panel footer__panel--right">
           <img src="assets/images/hand.jpeg" alt="Händer som håller planta" />
           <figcaption class="footer__heart" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
-              <path
-                fill="none"
-                stroke="#fff"
-                stroke-width="1.8"
-              />
-            </svg>
+            <img src="assets/icons/Logo.svg" alt="" />
             <span class="vh">Dekorativ hjärtikon</span>
           </figcaption>
         </figure>
