changed the footer to flexbox

--- a/index.html
+++ b/index.html
@@ -226,15 +226,15 @@
         </figure>
       </section>
     </main>
-
+    <!-- Footer, med flexbox -->
     <footer class="footer" id="kontakt">
-      <!-- Två fotopaneler (Grid) -->
-      <section class="footer__grid">
-        <figure class="footer__panel footer__panel--left">
+      <section class="footer__flex">
+        <figure class="footer__panel">
           <img
-            src="assets/images/massagrönsaker.avif"
+            src="assets/images/handsidan.avif"
             alt="Korg med olika grönsaker i skuggig trädgård"
           />
+
           <figcaption class="footer__overlay">
             <h3 class="footer__title">Vi hörs!</h3>
             <address class="contact">
@@ -258,14 +258,12 @@
               </p>
             </address>
           </figcaption>
-        </figure>
 
-        <figure class="footer__panel footer__panel--right">
-          <img src="assets/images/hand.jpeg" alt="Händer som håller planta" />
-          <figcaption class="footer__heart" aria-hidden="true">
+          <!-- Dekorativ logotyp -->
+          <section class="footer__heart" aria-hidden="true">
             <img src="assets/icons/Logo.svg" alt="" />
             <span class="vh">Dekorativ hjärtikon</span>
-          </figcaption>
+          </section>
         </figure>
       </section>
 
