--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
       </p>
     </footer>
 
-    <!-- Till toppen-knapp -->
+    <!-- Till toppen-knapp i smal vit list -->
     <p class="backtop">
-      <a href="#top" class="backtop__link">Till toppen av sidan ↑</a>
+      <a href="#top" class="backtop__link">Till toppen av sidan</a>
     </p>
   </body>
 </html>
