--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             src="assets/images/hand.jpeg"
             alt="Hand som håller jord med småplantor"
           />
+          <!-- Dekorativt hjärta över bilden -->
           <figcaption class="masthead__heart" aria-hidden="true">
             <img src="assets/icons/Logo.svg" alt="" />
             <span class="vh">Dekorativ hjärtikon</span>
@@ -226,7 +227,8 @@
         </figure>
       </section>
     </main>
-    <!-- Footer, med flexbox -->
+
+    <!-- Footer, komprimerad höjd + mörk vänstersida + flyttbar logga -->
     <footer class="footer" id="kontakt">
       <section class="footer__flex">
         <figure class="footer__panel">
@@ -237,6 +239,7 @@
 
           <figcaption class="footer__overlay">
             <h3 class="footer__title">Vi hörs!</h3>
+
             <address class="contact">
               <p class="contact__row">
                 <img
