--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
           <li class="tabs__item">
             <a class="tabs__link" href="#kontakt">Kontakt</a>
           </li>
+          <li class="tabs__item">
+            <a class="tabs__link" href="/mina.html">Mina sidor</a>
+          </li>
+          <li class="tabs__item">
+            <a class="tabs__link" href="#index">Logga in</a>
+          </li>
         </ul>
       </nav>
     </header>
